2009-12-15  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkmenuitem.c: accept nil as label.
	Reported by Kazuhiro NISHIYAMA. Thanks!!!

	* test/test_gtk_menu_item.rb: add.

2009-10-04  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkwindow.c: enable GdkWindow's cursor property again
	because GTK+ 2.18.1 fixed it. We marks GTK+ 2.18.0 as unsupported
	GTK+ version.
	Reported by Guillaume Cottenceau. Thanks!!!

2009-09-27  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkwindow.c: ignore GdkWindow's cursor property because it
	is registered as gpointer. We can't handle Gdk::Cursor without
	type information. We should define Gdk::Window#cursor instead of
	auto-property reader for it. [#2865895]
	Reported by Guillaume Cottenceau. Thanks!!!
	Reported by Mamoru Tasaka. Thanks!!!

2009-09-22  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkwidget.c: fix a typo:
	Gtk::Widget#set_scroll_adjustments ->
	Gtk::Widget#set_scroll_adjustment. [#2679744]
	Reported by Kentaro Fukuchi. Thanks!!!

2009-07-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/depend: add missing headers.
	Patch by Mamoru Tasaka. Thanks!!!

2009-05-31  Kouhei Sutou  <kou@cozmixng.org>

	* src/depend: use RUBYARCHDIR.
	Patch by OBATA Akio. Thanks!!!

	* src/lib/gtk2/base.rb: remove cairo loading because Ruby/Pango
	has tried it.

2009-05-27  Detlef Reichl  <detlef.reichl@gmx.org>
	* src/rbgtkmain.c (gtk_m_init): use $0 instead of rb_argv0.

2009-05-27  Pascal Terjan  <pterjan@linuxfr.org>
	* test/test_gdk_display.rb (test_broadcast_startup_message):
	As explained by Kouhei, Gdk::Display#broadcast_startup_message is
	not yet implemented (see GNOME bug #528020), so omit the test for now.

2009-02-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkmain.c (gtk_m_init): use rb_argv0 instead of rb_progname.

2008-12-12  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: fix dependency check order to support build on other
	directory. [#2420281]
	Reported by troels knak-nielsen. Thanks!!!
